Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9413

Repeating valuesource animations with to bindings can be incorrect because of component completion order

    XMLWordPrintable

Details

    • 846210c6381827396868d15cdbb6d42daabda147

    Description

      The attached file demonstrates.

      One suggestion is to have a "component really complete" type of notification that the animation could subscribe to (though obviously we need to be careful that this doesn't get abused)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes