Don't start valuesource animations until all component objects have been completed.

Task-number: QTBUG-9413